fixed horizontal menu on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html, body {
+    width: auto;
+}
+
 @media screen and (max-height: 800px) {
     html {
     min-height: auto;
@@ -13,6 +17,5 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 100%;
     min-height: 900px;
 }
