--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,12 @@
     border: none !important;
 }
 
+.navbar-nav {
+    width: 100%; 
+    display: flex; 
+    justify-content: space-evenly;
+}
+
 @media screen and (max-width: 768px) {
     .logo {
         width: 98% !important;
@@ -45,5 +51,11 @@
     }
     .btn {
         margin-right: -24px;
+    }
+}
+
+@media screen and (max-height: 420px) {
+    .nav-item {
+        margin-bottom: 22px;
     }
 }
