--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -12,7 +12,7 @@
 
 .home {
     padding-top: 125px;
-    max-width: 100%;
+    width: 100%;
 }
 
 .special {
